# Navigation-brov2

./: .gitignore  .gitmodules
Docker/: Dockerfile  README.md  requirements.jl  requirements.txt
bags/20190616_154019_soerg_sss_1/bag/: metadata.yaml
bags/20190620_133812_dg10/bag/: metadata.yaml
notebooks/: Swath.ipynb  Untitled.ipynb  landmark_detector_1D.ipynb  map.ipynb
scripts/: enable_GUI_docker.sh  run_docker.sh  start_tmux.sh  update_pkg.jl
src/brov2_interfaces/: CMakeLists.txt  package.xml
src/brov2_interfaces/msg/: Sonar.msg  SonarProcessed.msg  SwathArray.msg  SwathProcessed.msg
src/brov2_landmark_detector/: package.xml  setup.cfg  setup.py
src/brov2_landmark_detector/brov2_landmark_detector/: landmark_detector_1D_node.py  landmark_detector_2D_node.py  landmark_detector_main.py  landmark_detector_node.py
src/brov2_map/: package.xml  setup.cfg  setup.py
src/brov2_map/brov2_map/: map_main.py  map_node.py  map_node_main.py
src/brov2_slam/: package.xml  setup.cfg  setup.py
src/brov2_sonar_processing/brov2_sonar_processing/: cubic_spline_regression.py  plot_utils.py  sonar_processing_node.py
src/brov2_sonar_processing/processed_frames/: knn_1.csv  knn_2.csv  knn_filtered_1.csv  knn_filtered_2.csv
src/brov2_swath_processing/: package.xml  setup.cfg  setup.py
src/brov2_swath_processing/brov2_swath_processing/: swath_processing_main.py  swath_processing_node.py
src/dune_log_2_rosbag/: CMakeLists.txt  package.xml
src/dune_log_2_rosbag/include/dune_log_2_rosbag/: sonar_data_2_rosbag.hpp
src/dune_log_2_rosbag/src/: csv_2_rosbag.py  sonar_data_2_rosbag.cpp
utility_functions/: csv2rosbag.py  csv_2_rosbag.py  utility_classes.py  utility_functions.py
(+6 files in other folders)
