<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dune_log_2_rosbag</name>
  <version>0.0.0</version>
  <description>Converts from dune logs (extracted as csv files) to rosbags</description>
  <maintainer email="vegard.haraldstad@gmail.com">vegard</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>brov2_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
